complete header(navbar) and footer

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap";
+
+ .body{
+    background-color: #ffff;
+    width: 100%;
+    height: 100%;
+    padding-top:30px;
+    margin-top:50px;
+  }
+
+  
