--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,46 @@
-<h1>about me</h1>
+<div class="row">
+    <div class="col-2">
+        <div class="sidenav">
+            <nav id="navbar-example3" class="navbar flex-column align-items-stretch p-3">
+                <nav class="nav flex-column">
+                    <a class="nav-link py-4" href="#item-1" style="color: dimgray;">About this website</a>
+                    <a class="nav-link py-4" href="#item-2" style="color: dimgray;">About the author</a>
+                    <a class="nav-link py-4" href="#item-3" style="color: dimgray;">Declaration</a>
+                </nav>
+            </nav>
+        </div>
+    </div>
+    <div class="col-10">
+        <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" tabindex="0">
+            <div id="item-1" class="fade-in">
+            <div class="row container">
+                <h3 class="col-4 py-5">About This Website</h3>
+                <p class="col-8" style="line-height: 1.75">
+                This is a website that collected some dramas, TV series, etc.<br/>
+                The articles include their introduction, casting, personal review and some inspired scripts in the dramas.<br/>
+                The purpose of constructing this web is to practice Ruby on Rails and to record the dramas I've watched.
+                </p>
+            </div>
+            </div>
+            <div id="item-2" class="fade-in">
+                <div class="row container">
+                    <h3 class="col-4 py-4">About the author</h3>
+                    <p class="col-8" style="line-height: 1.75">
+                    Ethan Ding, A CS student from NTU.<br/>
+                    I love to watch dramas as my entertainment, especially K-drama.
+                    </p>
+                </div>
+            </div>
+            <div id="item-3" class="fade-in">
+                <div class="row container">
+                    <h3 class="col-4">Declaration</h3>
+                    <p class="col-8" style="line-height: 1.75">
+                    This website is for my personal practice. <br/>
+                    Please do not use for business.
+                    </p>          
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
