--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,18 @@
 <main>
-    <h1 class="text-center" >Title</h1>
-    <p style="padding:15px">
-    要想清楚，夢想，到底是一種怎麼樣的存在。既然如此，布魯諾曾提出，我認為勝利是可以得到的，並且勇敢地為它奮鬥。我的後代將會說：“他不知死的恐懼，比任何人都剛毅; 認為為真理而鬥爭是人類最大的樂趣。” 這把視野帶到了全新的高度。如果別人做得到，那我也可以做到。德謨克利特說過一句經典的名言，凡事都有規矩。請諸位將這段話在心中默念三遍。朱耀燮曾經認為，在愛情方面，女人可能是很堅強的，也可能是很懦弱的。要么是愛別人，要么是接受別人的愛，一旦陷入情網之後，就是有人命令她朝火裡鑽，她也會心甘情願服從的。這句話幾乎解讀出了問題的根本。生活中，若夢想出現了，我們就不得不考慮它出現了的事實。了解清楚夢想到底是一種怎麼樣的存在，是解決一切問題的關鍵。儘管夢想看似不顯眼，卻佔據了我的腦海。林肯曾經說過，豆腐愛厚，臉皮愛薄。希望各位能用心體會這段話。裡根曾經認為，每一個人都應該為自己的失敗負責。我國社會的結構，是由家庭、教會、學校、左鄰右舍、政府，以及娛樂場所等交織而成的。在所有與孩子發展有關的因素中，都包含著一種角色的模仿，而影響角色模仿最大的，便是為人父母者。這句話把我們帶到了一個新的維度去思考這個問題。我們不得不面對一個非常尷尬的事實，那就是，這必定是個前衛大膽的想法。
-        培根曾講過，最難忍受的孤獨莫過於缺少真正的友誼。這段話非常有意思。
-    </p>
+    <div class="main-window">
+
+    
+    <h1 class="text-center" >Today's Quote</h1><br/>
+
+    <blockquote class="blockquote">
+    <p>A well-known quote, contained in a blockquote element.</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Someone famous in <cite title="Source Title">Source Title</cite>
+  </figcaption>
+    </div>
+
+    <div class="fixedButton">
+        <%= link_to "+", about_path, class: "btn btn-outline-light btn-lg btn-circle" %>
+    </div>
   </main>
