--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-light text-center fixed-bottom">
+<footer class="bg-light text-center">
   <div class="container">
         <ul class="list-unstyled">
             <h4 class="py-3"> Contact Information </h4>
