--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,24 @@
+<div class="form-block", style="text-align:left">
 <%= form_with model: article do |form| %>
-    <div>
-        <%= form.label :title%><br>
-        <%= form.text_field :title%>
-        <%= article.errors.full_messages_for(:title).each do |message| %>
-            <div><%= message%></div>
-        <% end %>
+    <div style="margin-top:10px">
+        <%= form.label :title %><br>
+        <%= form.text_field :title, size:"70x1", class:"form-control" %>
+        
     </div>
 
-    <div>
+    <div style="margin-top:10px">
         <%= form.label :body %><br>
-        <%= form.text_field :body %>
-        <%= article.errors.full_messages_for(:body).each do |message| %>
-            <div><%= message%></div>
-        <% end %>
+        <%= form.text_area :body, size:"70x5", class:"form-control" %>  
     </div>
 
-    <div>
-        <%= form.submit '提交' %>
+    <div style="margin-top:10px">
+        <%= form.label :review %><br>
+        <%= form.text_area :review, size:"70x5", class:"form-control" %>  
+    </div>
+
+    <div style="text-align:right; margin-top:10px">
+        <%= form.submit 'Submit', class:"btn btn-small btn-light"%>
     </div>
 
 <% end %>
+</div>
