--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main-window">
-<h1>New Article</h1>
+<h1>New Drama</h1>
 
-<%= render "form", article: @article %>
+<%= render "form", article: @article, tag: @tag %>
 </div>
