--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<p><%= @article.tag_list %></p>
 
 <ul>
     <li><%= link_to "Edit", edit_article_path(@article) %></li>
