--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,9 @@
             <%= link_to "Home", root_path, class: "nav-link", style: "color:white; padding:15px; font-size: 20px"%>
         </li>
         <li class="nav-item">
+            <%= link_to "Dramas", articles_path, class: "nav-link", style: "color:white; padding:15px; font-size: 20px"  %>
+        </li>
+        <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link", style: "color:white; padding:15px; font-size: 20px"  %>
         </li>
     </ul>
