add feature: rich text editor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,7 @@
   }
 
   .main-window{
-    background-color: black;
+    background-color: rgb(80, 53, 105);
     color: white;
     padding-top: 100px;
     height: 150vh;
