--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div style="margin-top:10px">
         <%= form.label :review, "Review" %>
-        <%= form.text_area :review, size:"70x5", class:"form-control" %>  
+        <%= form.rich_text_area :review, size:"70x5", class:"form-control" %>  
     </div>
 
     <div class="row" style="margin-top:15px">
