--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
         <h3>Intro:</h3>
         <p></p><%= @article.body %></p>
         <h3>Review: </h3>
-        <p></p><%= @article.review %></p>
+        <div><%= @article.review %></div>
         <p><%= @article.tag_list %></p>
 
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-light"%>
