--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-2">
         <div class="sidenav">
-            <nav id="navbar-example3" class="navbar flex-column align-items-stretch p-3">
-                <nav class="nav flex-column">
-                    <a class="nav-link py-4" href="#item-1" style="color: dimgray;">About this website</a>
-                    <a class="nav-link py-4" href="#item-2" style="color: dimgray;">About the author</a>
-                    <a class="nav-link py-4" href="#item-3" style="color: dimgray;">Declaration</a>
+            <nav id="navbar-example3" class="navbar flex-column align-items-stretch">
+                <nav class="nav">
+                    <a class="nav-link" href="#item-1" style="color: dimgray;">About this website</a>
+                    <a class="nav-link" href="#item-2" style="color: dimgray;">About the author</a>
+                    <a class="nav-link" href="#item-3" style="color: dimgray;">Declaration</a>
                 </nav>
             </nav>
         </div>
