--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,49 +32,64 @@
     align-items: center;
     font-size: 20px;
   }
+.main-window{
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding-top: 100px;
+  height: 150vh;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+}
+.form-window{
+  background-color: rgb(206, 208, 210);
+  color: rgb(0, 0, 0);
+  padding-top: 100px;
+  height: 150vh;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+}
 
-  .main-window{
-    background-color: rgb(80, 53, 105);
-    color: white;
-    padding-top: 100px;
-    height: 150vh;
-    width: 100%;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 20px;
-  }
+.form-block{
+  /* margin: 10px; */
+  /* padding: 10px; */
+  opacity: 1;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  font-size: 24px;
+}
+.sidenav {
+  height: 800px;
+  width: 300px;
+  position: fixed;
+  top: 150px;
+  left: 40px;
+  overflow-x: hidden;
+  font-size: 20px;
+}
 
-  .form-block{
-    /* margin: 10px; */
-    /* padding: 10px; */
-    opacity: 1;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    font-size: 24px;
-  }
-  .sidenav {
-    height: 800px;
-    width: 300px;
-    position: fixed;
-    top: 220px;
-    left: 20px;
-    overflow-x: hidden;
-    font-size: 25px;
-  }
-  .fixedButton{
-    position: fixed;
-    bottom: 0px;
-    right: 10px; 
-    padding: 20px;
-  }
+.fixedButton{
+  position: fixed;
+  bottom: 0px;
+  right: 10px; 
+  padding: 20px;
+}
 
-  .btn-circle{
-    width: 70px;
-    height: 70px;
-    padding: 2px 20px;
-    border-radius: 40px;
-    font-size: 40px;
-    /* line-height: 1.33; */
-  }
+.btn-circle{
+  width: 70px;
+  height: 70px;
+  padding: 2px 20px;
+  border-radius: 40px;
+  font-size: 40px;
+  /* line-height: 1.33; */
+}
+
+.sticky-title{
+  position: sticky;
+  top: 200px;
+}
