add featue: rating of article

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,17 @@
 
 <div class="form-block", style="text-align:left">
 <%= form_with model: article do |form| %>
-    <div style="margin-top:10px">
-        <%= form.label :title, "Drama Name" %><br>
-        <%= form.text_field :title, size:"70x1", class:"form-control" %>
-        
+    <div class='row'>
+        <div style="margin-top:10px" class="col-6">
+            <%= form.label :title, "Drama Name" %><br>
+            <%= form.text_field :title, size:"70x1", class:"form-control" %>
+        </div>
+        <div style="margin-top:10px" class='col-6 text-center'>
+            <%= form.label :rating, "Rating" %><br>
+            1.0-     
+            <%= form.range_field :rating, :in => 0.0..5.0, :step => '.1', style:"width:75%"%>
+            -5.0
+        </div>
     </div>
 
     <div style="margin-top:10px">
@@ -17,19 +24,16 @@
         <%= form.rich_text_area :review, class:"form-control", style:"min-height:20rem" %>  
     </div>
 
+   
+
     <div class="row" style="margin-top:15px">
-        
         <%= form.label :tag_list, "Tags", class:"col-2 col-form-label text-align-left" %>
         <div class="col-10">
             <%#= select_tag "tag_list", options_from_collection_for_select(tag, "name", "name"), class:"col-10"%>
             <div class="input-group mb-3">
-
                 <%= form.text_area :tag_list, placeholder: "#Add New Tags", size:"30x1", class:"form-control" %>
             </div>        
         </div>
-        
-
-        
     </div>
     <div style="margin-top:10px; text-align:right">
         <%= form.submit 'Submit', class:"btn btn-small btn-light"%>
