--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-    <div class="main-window">
+    <div class="main-window" style="height:100vh">
 
     
     <h1 class="text-center" >Today's Quote</h1><br/>
