--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,8 @@
   background-color: rgb(0, 0, 0);
   color: white;
   padding-top: 100px;
-  height: 150vh;
+  padding-bottom: 100px;
+  height: 150%;
   width: 100%;
   text-align: center;
   vertical-align: middle;
