prettify: article show page

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,8 @@
 
     <div style="margin-top:10px">
         <%= form.label :review, "Review" %>
-        <%= form.rich_text_area :review, class:"form-control", style:"min-height:20rem" %>  
+        <%#= form.rich_text_area :review, class:"form-control", style:"min-height:20rem" %>  
+        <%= form.text_area :review, class:"form-control", style:"min-height:20rem" %>  
     </div>
 
    
