--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,8 +36,7 @@
   background-color: rgb(0, 0, 0);
   color: white;
   padding-top: 100px;
-  padding-bottom: 100px;
-  height: 150%;
+  height: 800px;
   width: 100%;
   text-align: center;
   vertical-align: middle;
@@ -92,7 +91,14 @@
 
 .sticky-title{
   position: sticky;
-  top: 200px;
+  top: 80px;
+  height: 100px;
+  background-color: black;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 
 .table-hover{
@@ -106,3 +112,23 @@
 .tr:hover{
   background-color: darkgray;
 }
+.paragraph-title{
+  /* background-color: aliceblue; */
+  border-left: 5px solid lightblue;
+  width: 90px;
+  height: 50px;
+  box-sizing: border-box;
+  font-size: 40px;
+  margin: 1em 8px;
+}
+.paragraph-content{
+  width: 80%;
+  /* height: 100px; */
+  box-sizing: border-box;
+  font-size: 20px;
+  /* margin: 1.5em 10px; */
+  line-height: 2;
+  padding-left: 25%;
+  /* text-align: left; */
+}
+
