--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-6">
         <div style="text-align:left">
             <h1>All Dramas</h1>
-            <h5>Now we have <%= @count %> articles! </h5>
+            <h5>Now we have  <span style="color:sandybrown"> <%= @count %> </span>  articles! </h5>
 
             <table class="table table-hover">
             <thead>
@@ -26,5 +26,8 @@
         </div>
     <div class="col-3"> </div>
     </div>
+</div>
+<div class="pagination">
+    <%= paginate @articles, window: 2 %>
 </div>
 </div>
