--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,4 +30,7 @@
 <div class="pagination">
     <%= paginate @articles, window: 2 %>
 </div>
+<div class="fixedButton" >
+        <%= link_to "+", new_article_path, class: "btn btn-outline-light btn-circle", 'data-bs-toggle': "tooltip", 'data-bs-placement': "top", 'title': "新增文章" %>
+</div>
 </div>
